# telecom-customer-churn

./: .pre-commit-config.yaml  pyproject.toml
libs/: __init__.py  core.py  interfaces.py  metrics.py  utils.py
notebooks/: main.ipynb
